--- a/Inicio.html
+++ b/Inicio.html
@@ -32,15 +32,15 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Productos.html">Productos</a>
+                    <a class="nav-link" href="/Paginas/Productos.html">Productos</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Contacto.html">Contacto</a>
+                    <a class="nav-link" href="/Paginas/Contacto.html">Contacto</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/QuienesSomos.html">Quienes Somos</a>
+                    <a class="nav-link" href="/Paginas/QuienesSomos.html">Quienes Somos</a>
                 </li>
 
                 <li class="nav-item dropdown">
