--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contacto</title>
+    <title>Productos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,15 +32,15 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Productos.html">Productos</a>
+                    <a class="nav-link" href="/Paginas/Productos.html">Productos</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Contacto.html">Contacto</a>
+                    <a class="nav-link" href="/Paginas/Contacto.html">Contacto</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/QuienesSomos.html">Quienes Somos</a>
+                    <a class="nav-link" href="/Paginas/QuienesSomos.html">Quienes Somos</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -65,27 +65,23 @@
     <div class="container">
         <!-- Inicio-Header -->
         <header>
-            <h1 class="display-4 text-center">Contáctanos</h1>
-            <h2 class="text-center"> Si tienes alguna pregunta, no dudes en escribirnos.</h2>
+            <h1 class="display-4 text-center">Nuestros Productos</h1>
+            <h2 class="text-center">Explora nuestros productos destacados.</h2>
         </header>
         <!-- Fin-Header -->
 
         <!-- Inicio-Main -->
         <main>
-            <!-- Inicio-Container -->
             <div class="container">
 
                 <div class="jumbotron">
                     <h1 class="display-4">Jumbo heading</h1>
                     <p class="lead">Jumbo helper text</p>
                     <hr class="my-2">
-                    
                 </div>
 
                 <div class="row">
-
-                    <!-- Inicio-Card1 -->
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img1">
                             <div class="card-body">
@@ -95,10 +91,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Fin-Card1 -->
 
-                    <!-- Inicio-Card2 -->
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
                             <div class="card-body">
@@ -108,10 +102,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Fin-Card2 -->
 
-                    <!-- Inicio-Card3 -->
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
                             <div class="card-body">
@@ -121,36 +113,10 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Fin-Card3 -->
 
-                    <!-- Inicio-Card4 -->
-                    <div class="col-md-3">
-                        <div class="card mt-4 mb-4">
-                            <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
-                            <div class="card-body">
-                                <h4 class="card-title">Title</h4>
-                                <p class="card-text">Text</p>
-                                <a href="#" class="btn btn-primary">Ver Mas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fin-Card4 -->
-
-                    <!-- Inicio-Formulario -->
-                    <form action="" class="mt-4 mb-4">
-                        <label for="correo">Correo Electronico:</label>
-                        <input id="correo" type="email">
-                        <label for="mensaje">Mensaje:</label>
-                        <textarea name="" id="mensaje"></textarea>
-                        <a class="btn btn-primary" href="#">Enviar</a>
-                    </form>
-                    <!-- Fin-Formulario -->
                 </div>
-
-
-
             </div>
-            <!-- Fin-Container -->
+
         </main>
         <!-- Fin-Main -->
 
