--- a/Paginas/QuienesSomos.html
+++ b/Paginas/QuienesSomos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Productos</title>
+    <title>Quienes Somos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,15 +32,15 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Productos.html">Productos</a>
+                    <a class="nav-link" href="/Paginas/Productos.html">Productos</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Contacto.html">Contacto</a>
+                    <a class="nav-link" href="/Paginas/Contacto.html">Contacto</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/QuienesSomos.html">Quienes Somos</a>
+                    <a class="nav-link" href="/Paginas/QuienesSomos.html">Quienes Somos</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -65,13 +65,14 @@
     <div class="container">
         <!-- Inicio-Header -->
         <header>
-            <h1 class="display-4 text-center">Nuestros Productos</h1>
-            <h2 class="text-center">Explora nuestros productos destacados.</h2>
+            <h1 class="display-4 text-center">Nuestra Misión</h1>
+            <h2 class="text-center">Conoce más sobre nosotros y nuestra misión.</h2>
         </header>
         <!-- Fin-Header -->
 
         <!-- Inicio-Main -->
         <main>
+            <!-- Inicio-Container -->
             <div class="container">
 
                 <div class="jumbotron">
@@ -81,6 +82,8 @@
                 </div>
 
                 <div class="row">
+
+                    <!-- Inicio-Card1 -->
                     <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img1">
@@ -91,7 +94,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Fin-Card1 -->
 
+                    <!-- Inicio-Card2 -->
                     <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
@@ -102,7 +107,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Fin-Card2 -->
 
+                    <!-- Inicio-Card3 -->
                     <div class="col-md-4">
                         <div class="card mt-4 mb-4">
                             <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
@@ -113,10 +120,11 @@
                             </div>
                         </div>
                     </div>
-
+                    <!-- Fin-Card3 -->
                 </div>
-            </div>
 
+            </div>
+            <!-- Fin-Container -->
         </main>
         <!-- Fin-Main -->
 
@@ -147,6 +155,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
