Commit Final,se agrego FormularioTabla.html y se corrigieron las rutas de los enlaces de navegacion,se agrego formulario y tabla de la pagina llamada de la misma manera y se corrigio formulario de pagina Contacto.html

--- a/Inicio.html
+++ b/Inicio.html
@@ -47,7 +47,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
+                        <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
                         <a class="dropdown-item" href="#">Action 2</a>
                     </div>
                 </li>
