--- a/Paginas/FormularioTabla.html
+++ b/Paginas/FormularioTabla.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contacto</title>
+    <title>Formulario y Tabla</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,8 +65,8 @@
     <div class="container">
         <!-- Inicio-Header -->
         <header>
-            <h1 class="display-4 text-center">Contáctanos</h1>
-            <h2 class="text-center"> Si tienes alguna pregunta, no dudes en escribirnos.</h2>
+            <h1 class="display-4 text-center">Formulario de Contacto y Tabla</h1>
+            <h2 class="text-center">Envía tu consulta y visualiza los datos enviados</h2>
         </header>
         <!-- Fin-Header -->
 
@@ -75,90 +75,60 @@
             <!-- Inicio-Container -->
             <div class="container">
 
-                <div class="jumbotron">
-                    <h1 class="display-4">Jumbo heading</h1>
-                    <p class="lead">Jumbo helper text</p>
-                    <hr class="my-2">
-
+                <div class="form-group">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" class="form-control mb-3" name="" id="nombre" aria-describedby="helpId"
+                        placeholder="">
+                    <small id="helpId" class="form-text text-muted">Tu Nombre</small>
                 </div>
 
-                <div class="row">
-
-                    <!-- Inicio-Card1 -->
-                    <div class="col-md-3">
-                        <div class="card mt-4 mb-4">
-                            <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img1">
-                            <div class="card-body">
-                                <h4 class="card-title">Title</h4>
-                                <p class="card-text">Text</p>
-                                <a href="#" class="btn btn-primary">Ver Mas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fin-Card1 -->
-
-                    <!-- Inicio-Card2 -->
-                    <div class="col-md-3">
-                        <div class="card mt-4 mb-4">
-                            <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
-                            <div class="card-body">
-                                <h4 class="card-title">Title</h4>
-                                <p class="card-text">Text</p>
-                                <a href="#" class="btn btn-primary">Ver Mas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fin-Card2 -->
-
-                    <!-- Inicio-Card3 -->
-                    <div class="col-md-3">
-                        <div class="card mt-4 mb-4">
-                            <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
-                            <div class="card-body">
-                                <h4 class="card-title">Title</h4>
-                                <p class="card-text">Text</p>
-                                <a href="#" class="btn btn-primary">Ver Mas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fin-Card3 -->
-
-                    <!-- Inicio-Card4 -->
-                    <div class="col-md-3">
-                        <div class="card mt-4 mb-4">
-                            <img class="card-img-top" src="https://via.placeholder.com/400x250" alt="img2">
-                            <div class="card-body">
-                                <h4 class="card-title">Title</h4>
-                                <p class="card-text">Text</p>
-                                <a href="#" class="btn btn-primary">Ver Mas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fin-Card4 -->
-
-                    <!-- Inicio-Formulario -->
-                    <form action="" class="mt-4 mb-4">
-                        <div class="form-group">
-                            <label for="email">Correo Electronico:</label>
-                            <input type="email" class="form-control" name="" id="email" aria-describedby="helpId"
-                                placeholder="">
-                            <small id="helpId" class="form-text text-muted">Tu Correo Electronico</small>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="mensaje">Mensaje:</label>
-                            <textarea class="form-control" name="" id="mensaje" rows="3"></textarea>
-                        </div>
-
-                        <button class="btn btn-primary ">Enviar</button>
-
-                    </form>
-
-                    <!-- Fin-Formulario -->
+                <div class="form-group">
+                    <label for="email">Correo Electronico:</label>
+                    <input type="email" class="form-control mb-3" name="" id="email" aria-describedby="helpId"
+                        placeholder="">
+                    <small id="helpId" class="form-text text-muted">Tu Correo Electronico</small>
                 </div>
 
 
+                <div class="form-group">
+                    <label for="telefono">Telefono:</label>
+                    <input type="tel" class="form-control mb-3" name="" id="telefono" aria-describedby="helpId"
+                        placeholder="">
+                    <small id="helpId" class="form-text text-muted">Tu Numero de Telefono</small>
+                </div>
 
+                <div class="form-group">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea class="form-control mb-3" name="" id="mensaje" rows="3"></textarea>
+                </div>
+
+                <button class="btn btn-primary mb-3">Enviar</button>
+
+                <!-- Inicio-Table -->
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Correo Electronico</th>
+                            <th>Telefono</th>
+                            <th>Mensaje</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td scope="row">Daniel</td>
+                            <td>12345@12345.com</td>
+                            <td>1234-5678</td>
+                            <td>ABCDEFG</td>
+                        </tr>
+                        <tr>
+                            <td scope="row"></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- Fin-Table -->
             </div>
             <!-- Fin-Container -->
         </main>
@@ -191,6 +161,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
