--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -47,7 +47,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
+                        <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
                         <a class="dropdown-item" href="#">Action 2</a>
                     </div>
                 </li>
