--- a/Inicio.html
+++ b/Inicio.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Inicio-Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">MiApp</a>
+        <a class="navbar-brand" href="/Inicio.html">MiApp</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
