--- a/Inicio.html
+++ b/Inicio.html
@@ -48,7 +48,7 @@
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <!-- <a class="dropdown-item" href="#">Action 2</a> -->
                     </div>
                 </li>
             </ul>
@@ -60,15 +60,20 @@
     </nav>
     <!-- Fin-Navbar -->
 
+    <!-- Inicio-Header -->
+    <header class="pb-3 text-center">
+        <div class="jumbotron">
+            <h1 class="display-3">Bienvenidos a nuestro sitio</h1>
+            <p class="lead">Explora nuestros productos, servicios y más.</p>
+        </div>
+        <!-- <h1 class="display-4 text-center">Bienvenidos a nuestro sitio</h1>
+                <h2 class="text-center">Explora nuestros productos, servicios y más.</h2> -->
+    </header>
+    <!-- Fin-Header -->
+
     <!-- Inicio-Container 90% -->
 
     <div class="container">
-        <!-- Inicio-Header -->
-        <header>
-            <h1 class="display-4 text-center">Bienvenidos a nuestro sitio</h1>
-            <h2 class="text-center">Explora nuestros productos, servicios y más.</h2>
-        </header>
-        <!-- Fin-Header -->
         <main>
             <div class="container">
                 <div class="row">
