--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -48,7 +48,7 @@
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <!-- <a class="dropdown-item" href="#">Action 2</a> -->
                     </div>
                 </li>
             </ul>
@@ -64,9 +64,14 @@
 
     <div class="container">
         <!-- Inicio-Header -->
-        <header>
-            <h1 class="display-4 text-center">Contáctanos</h1>
-            <h2 class="text-center"> Si tienes alguna pregunta, no dudes en escribirnos.</h2>
+        <header class="mt-4 mb-4">
+            <div class="jumbotron">
+                <h1 class="display-4">Contáctanos</h1>
+                <p class="lead">Si tienes alguna pregunta, no dudes en escribirnos.</p>
+                <hr class="my-2">
+            </div>
+            <!-- <h1 class="display-4 text-center">Contáctanos</h1>
+            <h2 class="text-center"> Si tienes alguna pregunta, no dudes en escribirnos.</h2> -->
         </header>
         <!-- Fin-Header -->
 
@@ -74,13 +79,6 @@
         <main>
             <!-- Inicio-Container -->
             <div class="container">
-
-                <div class="jumbotron">
-                    <h1 class="display-4">Jumbo heading</h1>
-                    <p class="lead">Jumbo helper text</p>
-                    <hr class="my-2">
-
-                </div>
 
                 <div class="row">
 
