--- a/Paginas/FormularioTabla.html
+++ b/Paginas/FormularioTabla.html
@@ -48,7 +48,7 @@
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <!-- <a class="dropdown-item" href="#">Action 2</a> -->
                     </div>
                 </li>
             </ul>
