--- a/Paginas/QuienesSomos.html
+++ b/Paginas/QuienesSomos.html
@@ -48,7 +48,7 @@
                         aria-haspopup="true" aria-expanded="false">Mas Opciones</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/Paginas/FormularioTabla.html">Formulario y Tabla</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <!-- <a class="dropdown-item" href="#">Action 2</a> -->
                     </div>
                 </li>
             </ul>
@@ -64,10 +64,16 @@
 
     <div class="container">
         <!-- Inicio-Header -->
-        <header>
-            <h1 class="display-4 text-center">Nuestra Misión</h1>
-            <h2 class="text-center">Conoce más sobre nosotros y nuestra misión.</h2>
+        <header class="mt-4 mb-4">
+            <div class="jumbotron">
+                <h1 class="display-4">Nuestra Misión</h1>
+                <p class="lead">Conoce más sobre nosotros y nuestra misión.</p>
+                <hr class="my-2">
+            </div>
+            <!-- <h1 class="display-4 text-center">Nuestra Misión</h1>
+            <h2 class="text-center">Conoce más sobre nosotros y nuestra misión.</h2> -->
         </header>
+
         <!-- Fin-Header -->
 
         <!-- Inicio-Main -->
@@ -75,11 +81,7 @@
             <!-- Inicio-Container -->
             <div class="container">
 
-                <div class="jumbotron">
-                    <h1 class="display-4">Jumbo heading</h1>
-                    <p class="lead">Jumbo helper text</p>
-                    <hr class="my-2">
-                </div>
+
 
                 <div class="row">
 
